# teva

./: CHANGELOG.md  Cargo.toml  README.md  main
.github/workflows/: rust.yml
src/: cli.rs  config.rs  core.rs  display.rs  errors.rs  git.rs  git_client.rs  lib.rs  main.rs  parser.rs  runners.rs
tests/: cli.rs
tests/common/: mod.rs
tests/fixtures/sanity_check_with_rspec/: .teva.toml  bar.rb  baz.rb  fizz.rb  foo.rb  init.rb  setup.sh
tests/fixtures/sanity_check_with_rspec/spec/: bar_spec.rb  baz_spec.rb  fizz_spec.rb  foo_spec.rb  init_spec.rb
tests/snapshots/: cli__not_enough_commits.snap  cli__sanity_check_with_rspec.snap
