[package]
name = "teva"
version = "0.1.0"
description = "Adventure sandals for continuous git commits"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
serde = "1.0"
signal-hook = "0.3.17"
toml = "0.8.19"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3"
insta = { version = "1.39.0", features = ["yaml", "filters"] }
